Added comments to style.css and edited README.md

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -31,16 +31,20 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
+/* Changed from .header to .nav to reflect nav on HTML*/
 
 .nav ul {
     list-style-type: none;
     
 }
+/* Changed from .header to .nav ul to reflect nav on HTML*/
 
 .nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+/* Changed from .header to .nav ul li to reflect nav on HTML*/
+
 
 a {
     color: #ffffff;
