Modified README.md, CSS, and HTML files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,6 @@ body {
 
 .nav ul {
     list-style-type: none;
-    
 }
 /* Changed from .header to .nav ul to reflect nav on HTML*/
 
@@ -91,26 +90,27 @@ p {
     background-color: #2589bd;
 }
 
-#benefittext {
+.benefits article {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/*Removed class "benefit-lead", "benefit-brand", and "benefit-cost" to consolidate their codes underneath new id "benefitstext"*/
+/*Removed class "benefit-lead", "benefit-brand", and "benefit-cost" to consolidate their codes underneath new class ".benefits article"*/
 
-.benefit h3 {
+
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-/*Removed .benefit-lead h3, .benefit-brand h3, and .benefit-cost h3 to consolidate h3 code under .benefit h3*/
+/*Removed .benefits-lead h3, .benefits-brand h3, and .benefits-cost h3 to consolidate h3 code under ".benefit h3"*/
 
-#benefitimg {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-/* Removed .benefit-lead img, .benefit-brand img, and .benefit-cost omg then consolidated their img code under id "benefitimg"*/
+/* Removed .benefit-lead img, .benefit-brand img, and .benefit-cost img then consolidated their img code under class ".benefit img"*/
 
-.search-engine-optimization {
+.content article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -118,51 +118,18 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+/*Removed .search-engine-optimization, .online-reputation-management, and .social-media marketing, then consolidated the code under the class ".content article"*/
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.content img {
     max-height: 200px;
 }
+/*Removed .search-engine-optimization img, .online-reputation-management img, and .social-media-marketing img. Then consolidated the img code under ".content img"*/
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/*Removed .search-engine-optimization h2, .online-reputation-management h2, and .social-media-marketing h2, then consolidated the code under class tag "content h2"*/
 
 .footer {
     padding: 30px;
